--- a/gallery.html
+++ b/gallery.html
@@ -17,22 +17,20 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="active">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="#">Gallery</a>
+                        <a href="gallery.html" class="active">Gallery</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </nav>
         </a>
     </header>
 
-    <section>Name</section>
-    <section>Slogan</section>
-    <section>About</section>
+    <section>Gallery</section>
     <footer>Socials</footer>
 </body>
 
