Style header and logo with google fonts

--- a/index.html
+++ b/index.html
@@ -20,18 +20,26 @@
                         <a href="index.html" class="active">Home</a>
                     </li>
                     <li>
-                        <a href="#">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     <li>
-                        <a href="#">Contact Us</a>
+                        <a href="contact.html">Contact Us</a>
                     </li>
                 </ul>
             </nav>
         </a>
     </header>
 
-    <section>Name</section>
-    <section>Slogan</section>
+    <section id="logo">
+        <div>
+            <h2>ZippyNerd Photography Studio</h2>
+        </div>
+    </section>
+    <section id="slogan">
+        <div>
+            <h3>Beauty is in the eye of the lens holder!</h3>
+        </div>
+    </section>
     <section>About</section>
     <footer>Socials</footer>
 </body>
