--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html">
             <h1>ZippyNerd Photography Studio</h1>
-            <nav>
+            <nav id="menu">
                 <ul>
                     <li>
                         <a href="index.html">Home</a>
