--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="index.html">
             <h1>ZippyNerd Photography Studio</h1>
             <nav>
-                <ul>
+                <ul id="menu">
                     <li>
                         <a href="index.html" class="active">Home</a>
                     </li>
