Style logo and slogan

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>ZippyNerd Photography Studio</h1>
+            <h1 id="logo">ZippyNerd Photography Studio</h1>
+        </a>
             <nav>
                 <ul id="menu">
                     <li>
@@ -27,10 +28,10 @@
                     </li>
                 </ul>
             </nav>
-        </a>
+        
     </header>
 
-    <section id="logo">
+    <section >
         <div>
             <h2>ZippyNerd Photography Studio</h2>
         </div>
