Style logo and about

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
     <header>
-        <a href="index.html">
-            <h1 id="logo">ZippyNerd Photography Studio</h1>
+        <a href="index.html" id="logo">
+            ZippyNerd Photography Studio
         </a>
             <nav>
                 <ul id="menu">
@@ -33,7 +33,7 @@
 
     <section >
         <div>
-            <h2>ZippyNerd Photography Studio</h2>
+            <h2 class="mid-heading">ZippyNerd Photography Studio</h2>
         </div>
     </section>
     <section id="slogan">
@@ -41,7 +41,11 @@
             <h3>Beauty is in the eye of the lens holder!</h3>
         </div>
     </section>
-    <section>About</section>
+    <section>
+        <div id="about-us">
+            <p>Giving you beautiful memories for any occasion.</p>
+        </div>
+    </section>
     <footer>Socials</footer>
 </body>
 
