--- a/index.html
+++ b/index.html
@@ -46,7 +46,15 @@
             <p>Giving you beautiful memories for any occasion.</p>
         </div>
     </section>
-    <footer>Socials</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"></a>
+            </li>
+        </ul>
+    </footer>
+    <!--fontawesome icons-->
+    <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
