Add footer elements

--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"></a>
             </li>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"></a>
+            </li>
+            <li>
+                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"></a>
+            </li>
         </ul>
     </footer>
     <!--fontawesome icons-->
