--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <footer>
         <ul>
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"></a>
+                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
