Style footer icons

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-media">
             <li>
                 <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
             </li>
