--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html" id="logo">
-            ZippyNerd Photography Studio
+            <h1>ZippyNerd Photography Studio</h1>
         </a>
             <nav>
                 <ul id="menu">
@@ -36,16 +36,19 @@
             <h2 class="mid-heading">ZippyNerd Photography Studio</h2>
         </div>
     </section>
+    <!--slogan section-->
     <section id="slogan">
         <div>
             <h3>Beauty is in the eye of the lens holder!</h3>
         </div>
     </section>
+    <!--about section-->
     <section>
         <div id="about-us">
             <p>Giving you beautiful memories for any occasion.</p>
         </div>
     </section>
+    <!--footer section-->
     <footer>
         <ul class="social-media">
             <li>
