--- a/gallery.html
+++ b/gallery.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
             <nav>
                 <ul id="menu">
@@ -31,7 +31,22 @@
     </header>
 
     <section>Gallery</section>
-    <footer>Socials</footer>
+        <!--footer section-->
+        <footer>
+            <ul class="social-media">
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                </li>
+                <li>
+                    <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                </li>
+            </ul>
+        </footer>
+        <!--fontawesome icons-->
+        <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
