Add image elements

--- a/gallery.html
+++ b/gallery.html
@@ -29,7 +29,7 @@
             </nav>
         </a>
     </header>
-
+        <!--images section-->
     <section>Gallery</section>
         <!--footer section-->
         <footer>
