Add images to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,13 @@
         </a>
     </header>
         <!--images section-->
-    <section>Gallery</section>
+    <section>
+        <img src="assets/images/portrait-lady.jpg" alt="">
+        <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+    </section>
         <!--footer section-->
         <footer>
             <ul class="social-media">
