Style image section

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
         </a>
     </header>
         <!--images section-->
-    <section>
+    <section id="photos">
         <div>
             <img src="assets/images/broken-log-with-moss.jpg" alt="Broken log with moss and plants growing in it" height="350px" width="300px">
             <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="Woman holding a rose by her eye" height="300px" width="300px">
