--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <a href="index.html">
+        <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
             <nav id="menu">
                 <ul>
