Add social links to contact us form

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,22 @@
     </header>
 
     <section>Form</section>
-    <footer>Socials</footer>
+    <!--footer section-->
+    <footer>
+        <ul class="social-media">
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <!--fontawesome icons-->
+    <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
