--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,12 @@
             </nav>
         </a>
     </header>
-
-    <section>Form</section>
+    <!--form section-->
+    <section>
+        <form action="post">
+            
+        </form>
+    </section>
     <!--footer section-->
     <footer>
         <ul class="social-media">
