--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,12 @@
     <!--form section-->
     <section>
         <form action="post">
+            <label for="first-name">First Name:</label>
+            <input type="text" id="first-name" required>
+
+            <label for="last-name">Last Name:</label>
+            <input type="text" id="last-name" required>
+
             
         </form>
     </section>
