--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,18 @@
     </header>
     <!--form section-->
     <section>
-        <form action="post">
+        <form action="#" method="post">
             <label for="first-name">First Name:</label>
             <input type="text" id="first-name" required>
 
             <label for="last-name">Last Name:</label>
             <input type="text" id="last-name" required>
 
-            
+            <label for="email">Email:</label>
+            <input type="email" id="email" required>
+
+            <textarea name="your-request" id="your-request" cols="30" rows="10"></textarea>
+            <input type="button" name="your-request" id="your-request">
         </form>
     </section>
     <!--footer section-->
