Add style to form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!--about section-->
     <section>
         <div id="about-us">
-            <p>Giving you beautiful memories for any occasion.</p>
+            <h4>Giving you beautiful memories for any occasion.</h4>
         </div>
     </section>
     <!--footer section-->
