--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,9 @@
             <input type="email" id="email" required>
 
             <textarea name="your-request" id="your-request" cols="30" rows="10"></textarea>
-            <input type="button" name="your-request" id="your-request">
+            
+            <input type="button" value="submit">
+            <input type="button" value="clear">
         </form>
     </section>
     <!--footer section-->
