--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,10 @@
         </a>
     </header>
     <!--form section-->
-    <section>
+    <section id="contact-us">
         <form action="#" method="post">
             <label for="first-name">First Name:</label>
             <input type="text" id="first-name" required>
-
             <label for="last-name">Last Name:</label>
             <input type="text" id="last-name" required>
 
