--- a/contact.html
+++ b/contact.html
@@ -33,12 +33,12 @@
     <section id="contact-us">
         <form action="#" method="post">
             <label for="first-name">First Name:</label>
-            <input type="text" id="first-name" required>
+            <input type="text" id="first-name" required placeholder="First Name">
             <label for="last-name">Last Name:</label>
-            <input type="text" id="last-name" required>
+            <input type="text" id="last-name" required placeholder="Last Name">
 
             <label for="email">Email:</label>
-            <input type="email" id="email" required>
+            <input type="email" id="email" required placeholder="your-email@here.com">
 
             <textarea name="your-request" id="your-request" cols="30" rows="10"></textarea>
             
