Add label for textarea

--- a/contact.html
+++ b/contact.html
@@ -40,10 +40,12 @@
             <label for="email">Email:</label>
             <input type="email" id="email" required placeholder="your-email@here.com">
 
-            <textarea name="your-request" id="your-request" cols="30" rows="10"></textarea>
+            <label for="your-request">Request a booking:</label>
+            <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
+            </textarea>
             
-            <input type="button" value="submit">
-            <input type="button" value="clear">
+            <input type="button" value="Submit">
+            <input type="button" value="Clear">
         </form>
     </section>
     <!--footer section-->
