--- a/contact.html
+++ b/contact.html
@@ -32,20 +32,27 @@
     <!--form section-->
     <section id="contact-us">
         <form action="#" method="post">
+          <div>
             <label for="first-name">First Name:</label>
             <input type="text" id="first-name" required placeholder="First Name">
             <label for="last-name">Last Name:</label>
             <input type="text" id="last-name" required placeholder="Last Name">
-
+          </div>
+          <div>
             <label for="email">Email:</label>
             <input type="email" id="email" required placeholder="your-email@here.com">
-
+        </div>
+        <div>
             <label for="your-request">Request a booking:</label>
+        </div>
+        <div>
             <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
             </textarea>
-            
-            <input type="button" value="Submit">
-            <input type="button" value="Clear">
+        </div>
+          <div>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Clear">
+        </div>
         </form>
     </section>
     <!--footer section-->
