Add padding to form elements

--- a/contact.html
+++ b/contact.html
@@ -32,40 +32,44 @@
     <!--form section-->
     <section id="contact-us">
         <form action="#" method="post">
-          <div>
-            <label for="first-name">First Name:</label>
-            <input type="text" id="first-name" required placeholder="First Name">
-            <label for="last-name">Last Name:</label>
-            <input type="text" id="last-name" required placeholder="Last Name">
-          </div>
-          <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" required placeholder="your-email@here.com">
-        </div>
-        <div>
-            <label for="your-request">Request a booking:</label>
-        </div>
-        <div>
-            <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
-            </textarea>
-        </div>
-          <div>
-            <input type="submit" value="Submit">
-            <input type="reset" value="Clear">
-        </div>
+            <div id="name">
+                <label for="first-name">First Name:</label>
+                <input type="text" id="first-name" required placeholder="First Name">
+                <label for="last-name">Last Name:</label>
+                <input type="text" id="last-name" required placeholder="Last Name">
+            </div>
+            <div id="email-input">
+                <label for="email">Email:</label>
+                <input type="email" id="email" required placeholder="your-email@here.com">
+            </div>
+            <div>
+                <label for="your-request">Request a booking:</label>
+
+            <div>
+                    <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
+                    </textarea>
+            </div>
+            <div id="buttons">
+                    <input type="submit" value="Submit">
+                    <input type="reset" value="Clear" class="clear">
+            </div>
         </form>
     </section>
     <!--footer section-->
     <footer>
         <ul class="social-media">
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on instagram (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://pinterest.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
