--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
-            <nav>
-                <ul id="menu">
-                    <li>
-                        <a href="index.html" class="active">Home</a>
-                    </li>
-                    <li>
-                        <a href="gallery.html">Gallery</a>
-                    </li>
-                    <li>
-                        <a href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
-            </nav>
-        
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact Us</a>
+                </li>
+            </ul>
+        </nav>
+
     </header>
 
-    <section >
+    <section>
         <div>
             <h2 class="mid-heading">ZippyNerd Photography Studio</h2>
         </div>
@@ -52,13 +52,17 @@
     <footer>
         <ul class="social-media">
             <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit us on instagram (opens in a new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on instagram (opens in a new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
             <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on facebook (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
             </li>
             <li>
-                <a href="https://pinterest.com" target="_blank" rel="noopener" aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
+                <a href="https://pinterest.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on pinterest (opens in a new tab)"><i class="fa-brands fa-pinterest"></i></a>
             </li>
         </ul>
     </footer>
