Style slogan and remove about section

--- a/index.html
+++ b/index.html
@@ -35,16 +35,9 @@
         <div>
             <h2 class="mid-heading">ZippyNerd Photography Studio</h2>
         </div>
-    </section>
     <!--slogan section-->
-    <section id="slogan">
-        <div>
+        <div id="slogan">
             <h3>Beauty is in the eye of the lens holder!</h3>
-        </div>
-    </section>
-    <!--about section-->
-    <section>
-        <div id="about-us">
             <h4>Giving you beautiful memories for any occasion.</h4>
         </div>
     </section>
