Add style to home page

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </header>
 
     <section>
-        <div>
-            <h2 class="mid-heading">ZippyNerd Photography Studio</h2>
+        <div id="mid-heading">
+            <h2>ZippyNerd Photography Studio</h2>
         </div>
     <!--slogan section-->
         <div id="slogan">
