--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
                     <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
                     </textarea>
             </div>
-            <div id="buttons">
-                    <input type="submit" value="Submit">
+            <div>
+                    <input type="submit" value="Submit" class="submit">
                     <input type="reset" value="Clear" class="clear">
             </div>
         </form>
