--- a/contact.html
+++ b/contact.html
@@ -46,8 +46,7 @@
                 <label for="your-request">Request a booking:</label>
 
             <div>
-                    <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request">
-                    </textarea>
+                    <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
             </div>
             <div>
                     <input type="submit" value="Submit" class="submit">
