--- a/gallery.html
+++ b/gallery.html
@@ -39,11 +39,13 @@
             <img src="assets/images/dew-on-a-spider-web.jpg" alt="Dew on spiderweb" height="300" width="300">
             <img src="assets/images/glass-in-sand.jpg" alt="Round piece of glass stuck in sand reflecting the sky"
                 height="300" width="350">
+        <div id="middle-images">  
             <img src="assets/images/pink-flower-01.jpg" alt="Pink flower" height="350" width="300">
             <img src="assets/images/plant-01.jpg" alt="Close up of a cactus" height="350" width="300">
             <img src="assets/images/broken-log-with-moss.jpg" alt="Broken log with moss and plants growing in it"
                 height="350" width="300">
             <img src="assets/images/peach-rose.jpg" alt="Peach coloured rose" height="350" width="300">
+        </div>    
             <img src="assets/images/graveyard-in-mist.jpg" alt="Old graveyard in mist" height="300" width="350">
             <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="Woman holding a rose by her eye"
                 height="300" width="300">
