--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
     </header>
     <!--form section-->
     <section id="contact-us">
-        <form action="#" method="post">
+        <form action="thanks.html" method="post">
             <div id="name">
                 <label for="first-name">First Name:</label>
                 <input type="text" id="first-name" required placeholder="First Name">
