Add a thank you message on the thank you page

--- a/thanks.html
+++ b/thanks.html
@@ -33,7 +33,19 @@
     <!--Thank you for your email section-->
     <section>
         <div>
-            
+            <h3>Thank you!</h3>
+            <p>Your email has been recieved and we will contact you shortly.
+                If you have any questions feel free to email us.
+            </p>
+            <br>
+            <p>
+                Remember this is about you and what you want. 
+                Lets have fun and make memories.
+            </p>
+            <br>
+            <p>
+                ZippyNerd team
+            </p>
         </div>
     </section>
     <!--footer section-->
