Link thank you page and contact page

--- a/thanks.html
+++ b/thanks.html
@@ -32,7 +32,7 @@
     </header>
     <!--Thank you for your email section-->
     <section>
-        <div>
+        <div id="thank-you">
             <h3>Thank you!</h3>
             <p>Your email has been recieved and we will contact you shortly.
                 If you have any questions feel free to email us.
