--- a/404error.html
+++ b/404error.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Photography Studio Photographers">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>ZippyNerd Photography Studio</title>
+    <title>ZippyNerd Photography Studio | 404 error</title>
 </head>
 
 <body>
@@ -30,19 +30,16 @@
         </nav>
 
     </header>
-    <!--Thank you for your email section-->
+    <!--error page-->
     <section>
-        <div id="thank-you">
-            <h3>Thank you!</h3>
-            <p>Your email has been recieved and we will contact you shortly.
-                If you have any questions feel free to email us.
-            </p>
-            <br>
+        <div id="error">
+            <h3>Sorry!</h3>
             <p>
-                Remember this is about you and what you want. 
-                Lets have fun and make memories.
+                Looks like the page you are looking for is not here.
             </p>
-            <br>
+            <p>
+                Please use the Navigation bar to choose another page.
+            </p>
             <p>
                 ZippyNerd team
             </p>
