Add media queries for tablet

--- a/gallery.html
+++ b/gallery.html
@@ -33,26 +33,20 @@
     <!--images section-->
     <div id="photos">
         <div>
-            <img src="assets/images/portrait-lady.jpg" alt="Portrait of a lady" height="300" width="300">
-            <img src="assets/images/pink-flower-02.jpg" alt="Pink flower with lots of petals" height="300"
-                width="300">
-            <img src="assets/images/dew-on-a-spider-web.jpg" alt="Dew on spiderweb" height="300" width="300">
-            <img src="assets/images/glass-in-sand.jpg" alt="Round piece of glass stuck in sand reflecting the sky"
-                height="300" width="350">
+            <img src="assets/images/portrait-lady.jpg" alt="Portrait of a lady">
+            <img src="assets/images/pink-flower-02.jpg" alt="Pink flower with lots of petals">
+            <img src="assets/images/dew-on-a-spider-web.jpg" alt="Dew on spiderweb">
+            <img src="assets/images/glass-in-sand.jpg" alt="Round piece of glass stuck in sand reflecting the sky">
         <div id="middle-images">  
-            <img src="assets/images/pink-flower-01.jpg" alt="Pink flower" height="350" width="300">
-            <img src="assets/images/plant-01.jpg" alt="Close up of a cactus" height="350" width="300">
-            <img src="assets/images/broken-log-with-moss.jpg" alt="Broken log with moss and plants growing in it"
-                height="350" width="300">
-            <img src="assets/images/peach-rose.jpg" alt="Peach coloured rose" height="350" width="300">
+            <img src="assets/images/pink-flower-01.jpg" alt="Pink flower">
+            <img src="assets/images/plant-01.jpg" alt="Close up of a cactus">
+            <img src="assets/images/broken-log-with-moss.jpg" alt="Broken log with moss and plants growing in it">
+            <img src="assets/images/peach-rose.jpg" alt="Peach coloured rose">
         </div>    
-            <img src="assets/images/graveyard-in-mist.jpg" alt="Old graveyard in mist" height="300" width="350">
-            <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="Woman holding a rose by her eye"
-                height="300" width="300">
-            <img src="assets/images/clown-doll-hanging-from-tree.jpg" alt="Old doll of clown hanging in a tree"
-                height="300" width="300">
-            <img src="assets/images/old-sundial-face.jpg" alt="Old sundial with the face of a man on the side"
-                height="300" width="300">
+            <img src="assets/images/graveyard-in-mist.jpg" alt="Old graveyard in mist">
+            <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="Woman holding a rose by her eye">
+            <img src="assets/images/clown-doll-hanging-from-tree.jpg" alt="Old doll of clown hanging in a tree">
+            <img src="assets/images/old-sundial-face.jpg" alt="Old sundial with the face of a man on the side">
         </div>
     </div>
     <!--footer section-->
