Add a location statement on index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <div id="slogan">
             <h3>Beauty is in the eye of the lens holder!</h3>
             <h4>Giving you beautiful memories for any occasion.</h4>
+            <p><em>(Only available in Cork, Irland.)</em></p>
         </div>
     </section>
     <!--footer section-->
