Add comments on all pages

--- a/gallery.html
+++ b/gallery.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
+    <!--Main logo-->
     <header>
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
+        <!--Navigation bar-->
             <nav>
                 <ul id="menu">
                     <li>
@@ -30,7 +32,7 @@
             </nav>
         
     </header>
-    <!--images section-->
+    <!--Images section-->
     <div>
         <div class="photos">
             <img src="assets/images/portrait-lady.jpg" alt="Portrait of a lady">
@@ -49,7 +51,7 @@
             <img src="assets/images/old-sundial-face.jpg" alt="Old sundial with the face of a man on the side">
         </div>
     </div>
-    <!--footer section-->
+    <!--Footer section-->
     <footer>
         <ul class="social-media">
             <li>
@@ -67,7 +69,7 @@
             </li>
         </ul>
     </footer>
-    <!--fontawesome icons-->
+    <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
