--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
 </head>
 
 <body>
+    <!--Main logo-->
     <header>
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
+        <!--Navigation bar-->
         <nav>
             <ul id="menu">
                 <li>
@@ -33,17 +35,18 @@
     </header>
 
     <section>
+        <!--Middle logo-->
         <div id="mid-heading">
             <h2>ZippyNerd Photography Studio</h2>
         </div>
-    <!--slogan section-->
+    <!--Slogan section-->
         <div id="slogan">
             <h3>Beauty is in the eye of the lens holder!</h3>
             <h4>Giving you beautiful memories for any occasion.</h4>
             <p><em>(Only available in Cork, Irland.)</em></p>
         </div>
     </section>
-    <!--footer section-->
+    <!--Footer section-->
     <footer>
         <ul class="social-media">
             <li>
@@ -61,7 +64,7 @@
             </li>
         </ul>
     </footer>
-    <!--fontawesome icons-->
+    <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
