--- a/contact.html
+++ b/contact.html
@@ -11,10 +11,12 @@
 </head>
 
 <body>
+    <!--Main Logo-->
     <header>
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
+        <!--Navigation bar-->
             <nav id="menu">
                 <ul>
                     <li>
@@ -30,7 +32,7 @@
             </nav>
        
     </header>
-    <!--form section-->
+    <!--Form section-->
     <section id="contact-us">
         <form action="thanks.html">
             <div id="name">
@@ -45,7 +47,6 @@
             </div>
             <div>
                 <label for="your-request">Request a booking:</label>
-
             <div>
                     <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
             </div>
@@ -55,7 +56,7 @@
             </div>
         </form>
     </section>
-    <!--footer section-->
+    <!--Footer section-->
     <footer>
         <ul class="social-media">
             <li>
@@ -73,7 +74,7 @@
             </li>
         </ul>
     </footer>
-    <!--fontawesome icons-->
+    <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
 
