Fix contact us form div validation error

--- a/contact.html
+++ b/contact.html
@@ -47,6 +47,7 @@
             </div>
             <div>
                 <label for="your-request">Request a booking:</label>
+            </div>
             <div>
                     <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
             </div>
