Add h3 to contact us page

--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,7 @@
     </header>
     <!--Form section-->
     <section id="contact-us">
+        <h3>Contact us</h3>
         <form action="thanks.html">
             <div id="name">
                 <label for="first-name">First Name:</label>
