Add 404 page not found

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div id="slogan">
             <h3>Beauty is in the eye of the lens holder!</h3>
             <h4>Giving you beautiful memories for any occasion.</h4>
-            <p><em>(Only available in Cork, Irland.)</em></p>
+            <p><em>(Only available in Cork, Ireland.)</em></p>
         </div>
     </section>
     <!--Footer section-->
