Update image gallery

--- a/contact.html
+++ b/contact.html
@@ -36,26 +36,20 @@
     <section id="contact-us">
         <h3>Contact us</h3>
         <form action="thanks.html">
-            <div id="name">
-                <label for="first-name">First Name:</label>
+                <label for="first-name" id="name">First Name:</label>
                 <input type="text" id="first-name" required placeholder="First Name">
+
                 <label for="last-name">Last Name:</label>
                 <input type="text" id="last-name" required placeholder="Last Name">
-            </div>
-            <div id="email-input">
-                <label for="email">Email:</label>
+
+                <label for="email" id="email-input">Email:</label>
                 <input type="email" id="email" required placeholder="your-email@here.com">
-            </div>
-            <div>
+
                 <label for="your-request">Request a booking:</label>
-            </div>
-            <div>
-                    <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
-            </div>
-            <div>
-                    <input type="submit" value="Submit" class="submit">
-                    <input type="reset" value="Clear" class="clear">
-            </div>
+                <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
+                
+                <input type="submit" value="Submit" class="submit">
+                <input type="reset" value="Clear" class="clear">
         </form>
     </section>
     <!--Footer section-->
