--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
     <!--Images section-->
     <div>
         <div class="photos">
-            <img src="assets/images/portrait-lady.jpg" alt="Portrait of a lady">
+            <img src="assets/images/snow-and-flowers.jpg" alt="Pink flowers with snow on them">
             <img src="assets/images/pink-flower-02.jpg" alt="Pink flower with lots of petals">
             <img src="assets/images/dew-on-a-spider-web.jpg" alt="Dew on spiderweb">
             <img src="assets/images/glass-in-sand.jpg" alt="Round piece of glass stuck in sand reflecting the sky">
@@ -46,7 +46,7 @@
             <img src="assets/images/peach-rose.jpg" alt="Peach coloured rose">
            
             <img src="assets/images/graveyard-in-mist.jpg" alt="Old graveyard in mist">
-            <img src="assets/images/woman-holding-rose-over-eye.jpg" alt="Woman holding a rose by her eye">
+            <img src="assets/images/plant-02.jpg" alt="Close up of a flower shaped cactus">
             <img src="assets/images/clown-doll-hanging-from-tree.jpg" alt="Old doll of clown hanging in a tree">
             <img src="assets/images/old-sundial-face.jpg" alt="Old sundial with the face of a man on the side">
         </div>
