Style contact us form

--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
     <!--Form section-->
     <section id="contact-us">
         <h3>Contact us</h3>
+        <div class="container">
         <form action="thanks.html">
                 <label for="first-name" id="name">First Name:</label>
                 <input type="text" id="first-name" required placeholder="First Name">
@@ -47,10 +48,11 @@
 
                 <label for="your-request">Request a booking:</label>
                 <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
-                
+
                 <input type="submit" value="Submit" class="submit">
                 <input type="reset" value="Clear" class="clear">
         </form>
+    </div>
     </section>
     <!--Footer section-->
     <footer>
