Add copyright to images

--- a/gallery.html
+++ b/gallery.html
@@ -51,6 +51,10 @@
             <img src="assets/images/old-sundial-face.jpg" alt="Old sundial with the face of a man on the side">
         </div>
     </div>
+    <!--Copyright notice on images-->
+    <div id="copyright">
+        <a href="copyright.html">Copyright Amor Jansen 2022 (All images are subject to copyright)</a>
+    </div>
     <!--Footer section-->
     <footer>
         <ul class="social-media">
