--- a/contact.html
+++ b/contact.html
@@ -38,17 +38,18 @@
                 <label for="first-name" id="name">First Name:</label>
                 <input type="text" id="first-name" required placeholder="First Name">
 
-                <label for="last-name">Last Name:</label>
+                <label for="last-name" id="surname">Last Name:</label>
                 <input type="text" id="last-name" required placeholder="Last Name">
 
                 <label for="email" id="email-input">Email:</label>
                 <input type="email" id="email" required placeholder="your-email@here.com">
 
-                <label for="your-request">Request a booking:</label>
+                <label for="your-request" id="request">Request a booking:</label>
                 <textarea name="your-request" id="your-request" cols="30" rows="10" placeholder="Your request"></textarea>
-
+            <div class="buttons">
                 <input type="submit" value="Submit" class="submit">
                 <input type="reset" value="Clear" class="clear">
+            </div>
             </div>
         </form>
         
