Add copyright icon

--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
     </div>
     <!--Copyright notice on images-->
     <div id="copyright">
-        <a href="copyright.html">Copyright Amor Jansen 2022 (All images are subject to copyright)</a>
+        <a href="copyright.html"><i class="fa-sharp fa-solid fa-copyright"></i> Amor Jansen 2022</a>
     </div>
     <!--Footer section-->
     <footer>
