Add comments on contact us page

--- a/404.html
+++ b/404.html
@@ -15,6 +15,8 @@
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
+        
+        <!--Navigation bar / inspired by Love Running-->
         <nav>
             <ul id="menu">
                 <li>
@@ -30,6 +32,7 @@
         </nav>
 
     </header>
+
     <!--error page-->
     <section>
         <div id="error">
@@ -45,6 +48,7 @@
             </p>
         </div>
     </section>
+
     <!--footer section-->
     <footer>
         <ul class="social-media">
@@ -63,6 +67,7 @@
             </li>
         </ul>
     </footer>
+
     <!--fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
