Add comments on thanks page

--- a/404.html
+++ b/404.html
@@ -11,11 +11,12 @@
 </head>
 
 <body>
+    <!--Main logo-->
     <header>
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
-        
+
         <!--Navigation bar / inspired by Love Running-->
         <nav>
             <ul id="menu">
@@ -30,7 +31,6 @@
                 </li>
             </ul>
         </nav>
-
     </header>
 
     <!--error page-->
