--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
             <h1>ZippyNerd Photography Studio</h1>
         </a>
 
-        <!--Navigation bar-->
+        <!--Navigation bar / inspired by Love Running-->
             <nav id="menu">
                 <ul>
                     <li>
@@ -73,7 +73,7 @@
             </li>
         </ul>
     </footer>
-    
+
     <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
