--- a/thanks.html
+++ b/thanks.html
@@ -11,10 +11,13 @@
 </head>
 
 <body>
+    <!--Main logo-->
     <header>
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
+
+        <!--Navigation bar / inspired by Love Running-->
         <nav>
             <ul id="menu">
                 <li>
@@ -28,8 +31,8 @@
                 </li>
             </ul>
         </nav>
-
     </header>
+
     <!--Thank you for your email section-->
     <section>
         <div id="thank-you">
@@ -48,6 +51,7 @@
             </p>
         </div>
     </section>
+
     <!--footer section-->
     <footer>
         <ul class="social-media">
@@ -66,6 +70,7 @@
             </li>
         </ul>
     </footer>
+    
     <!--fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
