Add comments on index page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
-        <!--Navigation bar-->
+
+        <!--Navigation bar / inspired by Love Running-->
         <nav>
             <ul id="menu">
                 <li>
@@ -31,7 +32,6 @@
                 </li>
             </ul>
         </nav>
-
     </header>
 
     <section>
@@ -46,6 +46,7 @@
             <p><em>(Only available in Cork, Ireland.)</em></p>
         </div>
     </section>
+
     <!--Footer section-->
     <footer>
         <ul class="social-media">
@@ -64,6 +65,7 @@
             </li>
         </ul>
     </footer>
+    
     <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
