Add comments on copyright page

--- a/copyright.html
+++ b/copyright.html
@@ -17,7 +17,8 @@
         <a href="index.html" id="logo">
             <h1>ZippyNerd Photography Studio</h1>
         </a>
-        <!--Navigation bar-->
+
+        <!--Navigation bar / inspired by Love Running-->
         <nav>
             <ul id="menu">
                 <li>
@@ -31,15 +32,16 @@
                 </li>
             </ul>
         </nav>
-
     </header>
 
+    <!--Copyright notice for images-->
     <section>
         <div id="image-copyright">
             <h3><em>All images in this website are subject to copyright.</em></h3>
             <p>No persons may use these photos without requesting permission from the owner.</p>
         </div>
     </section>
+
     <!--Footer section-->
     <footer>
         <ul class="social-media">
@@ -58,6 +60,7 @@
             </li>
         </ul>
     </footer>
+    
     <!--Fontawesome icons-->
     <script src="https://kit.fontawesome.com/0e281923af.js" crossorigin="anonymous"></script>
 </body>
